[package]
name = "gravel-gateway"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
openmetrics_parser = { git = "https://github.com/sinkingpoint/openmetrics-parser.git" }
