[package]
name = "gravel-gateway"
version = "1.0.0"
edition = "2018"
license = "LGPL-3.0"
description = "A Prometheus Push Gateway for FAAS applications"
homepage = "https://github.com/sinkingpoint/gravel-gateway"
repository = "https://github.com/sinkingpoint/gravel-gateway"
readme = "README.md"
keywords = ["openmetrics", "prometheus", "pushgateway"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
openmetrics-parser = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"
slog = "2.7.0"
slog-async = "2.6.0"
slog-json = "2.3.0"
futures = "0.3.7"

[features]
default = ["tls"]
tls = ["warp/tls"]