[package]
name = "gravel-gateway"
version = "1.4.0"
edition = "2018"
license = "LGPL-3.0"
description = "A Prometheus Push Gateway for FAAS applications"
homepage = "https://github.com/sinkingpoint/gravel-gateway"
repository = "https://github.com/sinkingpoint/gravel-gateway"
readme = "README.md"
keywords = ["openmetrics", "prometheus", "pushgateway"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
openmetrics-parser = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"
slog = "2.7.0"
slog-async = "2.6.0"
slog-json = "2.3.0"
futures = "0.3.7"
bcrypt = {optional = true, version = "0.10"}
trust-dns-proto = {optional = true, version = "0.21.2"}
trust-dns-resolver = {optional = true, version = "0.21.2"}
reqwest = { optional = true, version="0.11.10" }
twox-hash = { optional = true, version = "1.6.3" }

[features]
default = ["tls", "auth", "clustering"]
tls = ["warp/tls"]
auth = ["bcrypt"]
clustering = ["trust-dns-proto", "trust-dns-resolver", "reqwest", "twox-hash"]
